--- a/src/pages/mapa/style.css
+++ b/src/pages/mapa/style.css
@@ -97,6 +97,7 @@ body {
   width: 32px;
   height: 32px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   transform-origin: center;
