--- a/src/pages/mapa/style.css
+++ b/src/pages/mapa/style.css
@@ -906,6 +906,11 @@ h1 {
     gap: 4px;
   }
 
+  .accessibility-icon-img {
+    max-width: 50px;
+    max-height: 50px;
+  }
+
   .accessibility-icon-name {
     font-size: 10px;
   }
