--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header nav {
     display: flex;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 80px;
     background: transparent;
