feat(header): add click-to-copy email functionality
- Add clickable email element with visual feedback
- Implement clipboard API with fallback for older browsers
- Add success/error messaging with color indicators
- Update contact modal with new email address
- Add CSS styles for clickable email states

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -25,9 +25,8 @@
         <div class="modal-content">
             <span class="close-btn" id="close-contact-modal">&times;</span>
             <h2>Contato</h2>
-            <p>Telefone: (73) 99999-9999</p>
-            <p>Email: acessolivre&#64ifba.edu.br</p>
-            <p>Caso tenha alguma sugestão, <a href="https://forms.google.com/example" target="_blank">use o
+            <p id="email-copy" class="clickable-email" title="Clique para copiar">Email: acessolivreifbaeun@gmail.com</p>
+            <p>Caso tenha alguma sugestão, <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnlD847RUhnIE5aKJYHSRVfWdZCYtN_yqZNNj99svw1WJ4LA/viewform?usp=publish-editor" target="_blank">use o
                     formulário</a>.</p>
         </div>
     </div>
